[package]
name = "trip_app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
trip_core = { path = "../trip_core" }
trip_geo = { path = "../trip_geo" }
trip_storage = { path = "../trip_storage" }

[dev-dependencies]
chrono.workspace = true
