[package]
name = "trip_iced"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
iced.workspace = true
trip_app = { path = "../trip_app" }
trip_core = { path = "../trip_core" }
trip_geo = { path = "../trip_geo" }
trip_storage = { path = "../trip_storage" }
